# cosc363

assignment/assignment2/: assignment2.sln
assignment/assignment2/Debug/: assignment2.ilk
assignment/assignment2/assignment2/: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  RayTracer.cpp  SceneObject.cpp  SceneObject.h  assignment2.vcxproj  assignment2.vcxproj.filters
assignment/assignment2/assignment2/Debug/: vc142.idb
assignment/assignment2/assignment2/Debug/assignment2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  assignment2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab/lab1/Lab01/: Model3D.cpp  Teapot.cpp
lab/lab10/: CMakeLists.txt
lab/lab10/HeightMaps/: Terrain_hm_02.tga  Terrain_hm_03.tga
lab/lab10/Lab10_Files/III_TerrainPatches/: TerrainPatches.cpp  TerrainPatches.eval  TerrainPatches.vert
lab/lab10/Lab10_Files/II_TeapotPatches/: TeapotPatch.eval  TeapotPatches.cpp
lab/lab10/Lab10_Files/I_CubePatches/: CubePatches.cont  CubePatches.cpp  CubePatches.eval  CubePatches.h  CubePatches.vert
lab/lab2/Lab02_Files/: Cannon.cpp  Humanoid.cpp
lab/lab7/lab 7/: ._SceneObject.h  RayTracer.cpp
lab/lab8/: ._Lab08_Files
lab/lab8/Lab08_Files/: ._CMakeLists.txt  Plane.cpp  RayTracer.cpp
lab/lab9/: CMakeLists.txt
lab/lab9/Lab09_Files/II_Cube/: Cube.cpp  Cube.frag  Cube.h
lab/lab9/Lab09_Files/I_Seashell/: Seashell.frag  Seashell.vert
